--- a/src/app/shared/components/inicio/inicio.component.html
+++ b/src/app/shared/components/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-<div class="grid py-4 px-8">
+<div class="grid margenes">
 
   <!--Imagen de ver-->
     <div routerLink="filtros" class="col-12 sm:col-6">
